--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,23 +4,44 @@
     <meta charset="UTF-8">
     <title>Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+    </style>
 </head>
-<body class="bg-light">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
-        <div class="container">
-            <a class="navbar-brand" href="#">{{ .username }}'s Journal</a>
-        </div>
-    </nav>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6 text-center">
-                <div class="card shadow-sm">
-                    <div class="card-body">
-                        <h1 class="card-title mb-3">Hello {{ .username }}</h1>
-                    </div>
-                </div>
+<body class="bg-light d-flex flex-column">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4 sticky-top">
+        <div class="container-fluid d-flex">
+            <div style="flex:1">
+                <a class="navbar-brand" href="/">
+                    <img src="../assets/logo.png" alt="Logo" width="30" height="30" class="rounded-circle">
+                    MyJournal
+                </a>
+            </div>
+
+            <div style="flex:1" class="text-center">
+                <h3 class="text-white">{{ .username }}'s Journal</h3>
+            </div>
+
+            <div style="flex:1" class="d-flex justify-content-end">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="javascript:void(0)" onclick="document.getElementById('logout-form').submit()">Logout</a>
+                        <form id="logout-form" method="post" action="/logout"></form>
+                    </li>
+                </ul>
             </div>
         </div>
+    </nav>
+    <div class="flex-fill">
+        <textarea id="text-area" style="resize: none" class="form-control h-100 border-0 rounded-0"></textarea>
     </div>
+
+    <script>
+        const placeholders = ["start writing your journal here...", "what's on your mind?", "write down your thoughts..."];
+        document.getElementById("text-area").setAttribute("placeholder", placeholders[Math.floor(Math.random() * placeholders.length)]);
+    </script>
 </body>
 </html>
