--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         html, body {
@@ -10,6 +10,7 @@
             margin: 0;
         }
     </style>
+    <title>MyJournal - Dashboard</title>
 </head>
 <body class="bg-light d-flex flex-column">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4 sticky-top">
@@ -35,13 +36,5 @@
             </div>
         </div>
     </nav>
-    <div class="flex-fill">
-        <textarea id="text-area" style="resize: none" class="form-control h-100 border-0 rounded-0"></textarea>
-    </div>
-
-    <script>
-        const placeholders = ["start writing your journal here...", "what's on your mind?", "write down your thoughts..."];
-        document.getElementById("text-area").setAttribute("placeholder", placeholders[Math.floor(Math.random() * placeholders.length)]);
-    </script>
 </body>
 </html>
